@@ -10,6 +10,7 @@ partman (37) UNRELEASED; urgency=low
   * Stephen R. Marenka
     - Don't use partman for m68k/atari and q40 at all (isinstallable),
       but make it default for all other m68k subarchs.
+    - m68k definitions cleanup.
 
  -- Anton Zinoviev <zinoviev@debian.org>  Sat,  8 May 2004 19:52:49 +0300
 
